Plus1 WapStart Android SDK 2.3.2, 2014-10-10
- Added disabledOpenLinkAction feature

Plus1 WapStart Android SDK 2.3.1, 2014-08-25
- Added workaround for Google Play Market redirect links

Plus1 WapStart Android SDK 2.3.0, 2014-07-30
- Plus1 WapStart API v3 implemented
- Small bug fixes

Plus1 WapStart Android SDK 2.2.4, 2014-06-05
- Remove obsolete method call

Plus1 WapStart Android SDK 2.2.3, 2013-08-19
- Update debug settings in Bart project to default

Plus1 WapStart Android SDK 2.2.2, 2013-08-08
- Fixed WebView's crash issue for hardwareAccelerated=true case

Plus1 WapStart Android SDK 2.2.1, 2013-05-30
- Fixed onPause NPE crash when using disableAutoDetectLocation() method

Plus1 WapStart Android SDK 2.2.0, 2013-05-23
----------------------
- New banner shield in WebView layout
- Added new methods, some interface methods marked as deprecated
- New listeners for Plus1BannerView (OnShow, OnHide, OnCloseButton, OnExpand,
  OnCollapse, OnImpression, OnTrackClick listeners)
- SDK listener logic fixes
- Smart location provider logic, fixes
- Send virtual pixels (dp) for container metrics
- Added conversion submodule to SDK
- Added workaround due to Eclipse layout viewer bug
- Small bug fixes

Plus1 WapStart Android SDK 2.1.4, 2012-12-25
----------------------
- Fix bug for case when timers are paused and activity was destroyed

Plus1 WapStart Android SDK 2.1.3, 2012-11-08
----------------------
- Resolve WebView collisions issue (see setDisabledWebViewCorePausing() method)
- Added setRemoveBannersOnPause() useful method
- Improoved banner animation process

Plus1 WapStart Android SDK 2.1.2, 2012-09-24
----------------------
- Fixed critical typo in ad animator
- More safely calls of pauseTimers/resumeTimers methods (WebView)

Plus1 WapStart Android SDK 2.1.1, 2012-08-29
----------------------
- Fixed NPE in post-action body of banner animation context
- Fixed code using WebView pauseTimers/resumeTimers methods
- Release audio player when pause BartActivity